testsuite/tests/structs/struct_env_spec/test.out
== test.lkt ==
test.lkt:15:5: error: env specs are allowed in nodes only
15 |     env_spec {
   |     ^


lkt_compile: Done
